docs/assets/css/style.css
/* ... */
/* Contents section */
#contents {
    cursor: pointer;
    background: light-dark(oklch(0.96 0 0/0.7), oklch(0.25 0 0/0.7));
    color: var(--text-color);
    padding: 0.5rem 1rem;
    border-radius: 8px;
    border: 1px solid var(--border-color);
    margin-bottom: 1.5rem;
    transition:
        background-color 0.3s ease,
        border-color 0.3s ease,
        color 0.3s ease;

    & summary {
        font-weight: 600;
        font-family: var(--system-font);
        color: var(--text-color);
    }

    &[open] summary::after {
        transform: rotate(-180deg);
    }

    & a {
        display: inline-block;
        padding: 0.25rem 0;
        color: var(--link-color);

        &:hover {
            color: var(--hover-color);
        }
    }

    & ol {
        margin-top: 1lh;
    }
}

/* Code elements */
:is(pre, code) {
    font-family: ui-monospace, monospace;
}

code {
    font-weight: 500;
    font-size: 0.9em;
}

code:not(pre code, .highlighter-rouge code, div.highlighter-rouge code) {
    background-color: oklch(0.3 0 0);
    color: var(--code-text);
    padding: 0.25rem 0.4rem;
    border-radius: 3px;
    transition:
        background-color 0.3s ease,
        color 0.3s ease;
}

hr {
    border: none;
    border-top: 1px solid var(--border-color);
    margin: 2rem 0;
}

/* Code highlighting */

.highlighter-rouge {
    background: oklch(0.2 0 0);
    font-size: 0.8rem;
    line-height: 1.25rem;
    padding: 1rem;
    overflow-x: auto;
    border-radius: 8px;
    border: 2px solid oklch(0.5 0 0);

    & :not(pre, code, span) {
        border: 1px solid var(--border-color);
    }

    & span {
        border: none !important;
    }

    & :is(pre) {
        background: oklch(0.3 0 0);
    }

    & .highlight {
        background: transparent;
        padding: 0;
        border: none;
        border-radius: 0;
    }

    & .highlight span {
        border: none !important;
        background-color: transparent;
    }

    & :where(code, code span) {
        background-color: transparent;
        border: none !important;
    }

    & code span,
    & pre span {
        border: none !important;
        background-color: transparent;
    }

    & pre.highlight {
        background: transparent;
        border: none;
        margin: 0;
        border-radius: 0;
    }

    & table {
        width: 100%;
        border-collapse: collapse;

        & td {
            padding: 0;
        }

        & pre {
            margin: 0;
            padding: 2.5rem 1rem 1rem;
            font-family: ui-monospace;
            font-size: 0.8rem;
            line-height: 1.25rem;
            overflow-x: auto;
            white-space: pre;
            color: light-dark(oklch(85% 0 0), oklch(98.5% 0 0));
            word-break: normal;
            word-wrap: normal;
            text-shadow: none;
            font-family: ui-monospace;
            font-weight: normal;
            display: block;
            white-space: pre;
            background: transparent;
        }
    }

    & :where(pre, code) {
        background-color: transparent;
    }

    & pre.highlighter-rouge,
    & code.highlighter-rouge {
        background: oklch(0.3 0 0);
        padding: 0.25rem 0.4rem;
        border-radius: 3px;
    }

    /* Syntax highlighting */
    & :is(.cm, .c, .cd, .c1, .gh, .gp, .go, .gu, .w) {
        color: var(--comment-color);
        &:not(.w) {
            font-style: italic;
        }
    }

    & :is(.cp, .cs) {
        color: var(--comment-color);
        font-style: italic;
        font-weight: bold;
    }

    & :is(.err, .gr, .gt) {
        color: var(--string-color);
    }

    & :where(.gd, .gi) {
        color: light-dark(oklch(85% 0 0), oklch(98.5% 0 0));
        background-color: light-dark(
            oklch(0.9 0.1 0/0.2),
            oklch(0.3 0.1 0/0.2)
        );
    }

    & .gi {
        background-color: light-dark(
            oklch(0.9 0.1 140/0.2),
            oklch(0.3 0.1 140/0.2)
        );
    }
    & .ge {
        font-style: italic;
    }
    & .gs {
        font-weight: bold;
    }

    & :is(.k, .kc, .kd, .kn, .kp, .kr, .kv, .no, .nn, .nt) {
        color: var(--keyword-color);
        &:not(.no, .nn, .nt) {
            font-weight: bold;
        }
    }

    & .kt {
        color: var(--type-color);
        font-weight: bold;
    }

    & :is(.m, .mb, .mf, .mh, .mi, .mo, .mx, .il, .ss, .nb) {
        color: var(--number-color);
    }

    & :is(.s, .sb, .sc, .sd, .s1, .s2, .se, .sh, .si, .sx, .ne) {
        color: var(--string-color);
        &.ne {
            font-weight: bold;
        }
    }

    & .sr {
        color: var(--regex-color);
    }

    & :is(.na, .vc, .vg, .vi, .nv, .nc, .nf, .nl, .nd, .ni) {
        color: var(--name-color);
        &:is(.nc, .nf, .nl, .nd, .ni) {
            font-weight: bold;
        }
    }

    & .attribute {
        color: var(--attribute-color);
    }

    & :is(.o, .ow) {
        color: light-dark(oklch(85% 0 0), oklch(98.5% 0 0));
        font-weight: bold;
    }

    /* Line numbers */
    & .ln-n {
        text-align: right;
        color: var(--comment-color);
        padding-right: 0.5rem;
        font-family: ui-monospace;
        font-size: 0.8rem;
        line-height: 1.25rem;
        margin-right: 1rem;
        border-right: 1px solid var(--border-color);
    }
}

/* Code language and copy button */
.code-language,
.copy-button {
    position: absolute;
    background: oklch(0.2 0 0);
    color: oklch(85% 0 0);
    padding: 4px 8px;
    font-size: 0.8rem;
    font-family: system-ui;
    font-weight: bold;
    border-bottom-right-radius: 4px;
    z-index: 10;
}

.code-language {
    top: 0.5rem;
    left: 0.5rem;
}

.copy-button {
    top: 0.5rem;
    right: 0.5rem;
    border-radius: 8px;
    border-bottom-left-radius: 4px;
    transition: background 0.2s ease-in-out;
    cursor: pointer;

    &:hover {
        background: oklch(0.3 0 0);
    }
}
/* ... */

